[tool.poetry]
name = "diffuse"
version = "0.1.0"
description = ""
authors = ["Sandeep Aggarwal <asandeep.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylint = "^2.5.3"
isort = "^5.5.2"
pre-commit = "2.1.1"
pytest-asyncio = "^0.14.0"
asynctest = "^0.13.0"
pytest-mock = "^3.3.1"
pytest-cov = "^2.10.1"

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
