[tool.poetry]
authors = ["Sandeep Aggarwal <asandeep.me@gmail.com>"]
description = "Python Diffuse"
license = "MIT"
name = "diffuse"
version = "0.3.0"

readme = "README.md"

homepage = "https://asandeep.github.io/diffuse/"
repository = "https://github.com/asandeep/diffuse.git"

keywords = ["python3", "concurrency", "asyncio", "threading", "multiprocessing"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.5"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
tox = "^4.15.1"


[tool.black]
line-length = 80


[tool.isort]
profile = "black"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py38, py39, py310

[testenv]
allowlist_externals = poetry
commands =
    poetry install --with test
    poetry run pytest --cov-report=xml --cov=diffuse
"""


[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
